--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "buffer": "^5.7.1",
     "eslint": "^8.29.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "parcel": "^2.8.0",
     "prettier": "^2.8.0",
+    "process": "^0.11.10",
     "typescript": "^4.9.3"
   },
   "alias": {
@@ -35,6 +37,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
-    "preact": "^10.11.3"
+    "preact": "^10.11.3",
+    "vega": "^5.22.1",
+    "vega-embed": "^6.21.0"
   }
 }
