--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mui/material": "^5.10.16",
     "preact": "^10.11.3",
     "vega": "^5.22.1",
-    "vega-embed": "^6.21.0"
+    "vega-embed": "^6.21.0",
+    "vega-lite": "^5.6.0"
   }
 }
